# rag-python

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  cleaning.py  client.py  embeddings.py  evaluation.py  generation.py  guardrails.py  query_rewriting.py  rag_pipeline.py  reranker.py  retrieval.py  vector_store.py
backend/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  factory.py  openai_provider.py
complete_basic_rag/: __init__.py  cli.py
data/: sample.txt
docs/: CLI.md  CONFIGURATION.md  PROVIDERS.md  README.md  USAGE.md
examples/: ollama_local.py  openai_basic.py
frontend/: README.md
src/minirag/: __init__.py  cleaning.py  cli.py  client.py  config.py  document_loaders.py  evaluation.py  options.py  query_rewriting.py  reranker.py  vector_store.py
src/minirag/providers/: base.py  gemini_provider.py  ollama_provider.py
src/rag_python/: __init__.py  chunking.py  cli.py  client.py  config.py  document_loaders.py  generation.py  help_text.py  hybrid_search.py  log.py  options.py  query_rewriting.py  rag_pipeline.py  reranker.py  retrieval.py  vector_store.py
src/rag_python/providers/: anthropic_provider.py  azure_openai_provider.py  base.py  factory.py  local_provider.py  ollama_provider.py  openai_provider.py  streaming.py
src/ragkit/: __init__.py  cli.py  client.py  config.py  evaluation.py  generation.py  guardrails.py  rag_pipeline.py  reranker.py  retrieval.py  vector_store.py
src/ragkit/providers/: azure_openai_provider.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_hybrid_search.py  test_import.py  test_loaders.py  test_package.py  test_pipeline.py  test_providers.py  test_retrieval.py  test_streaming.py
