[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "complete-basic-rag"
version = "0.1.0"
description = "Modular RAG toolkit (OpenAI + Chroma) with query rewriting, reranking, guardrails, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.12.0",
  "tiktoken>=0.5.0",
  "chromadb>=0.4.22",
  "pypdf>=3.17.0",
  "python-docx>=1.1.0",
  "langdetect>=1.0.9",
  "regex>=2023.0.0",
  "sentence-transformers>=2.2.0",
  "torch>=2.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
anthropic = ["anthropic>=0.20.0"]
gemini = ["google-genai>=0.3.0"]

[project.scripts]
complete-basic-rag = "complete_basic_rag.cli:main"

[project.urls]
Homepage = "https://github.com/your-name/complete-basic-rag"

