[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minirag"
version = "0.1.0"
description = "Lightweight production-grade RAG for Python: multi-LLM, query rewriting, reranking, guardrails, and evaluation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Raghav Singla", email = "04raghavsingla28@gmail.com" },
]
keywords = ["rag", "llm", "embeddings", "chromadb", "openai", "minirag", "retrieval-augmented-generation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "openai>=1.12.0",
  "tiktoken>=0.5.0",
  "chromadb>=0.4.22",
  "pypdf>=3.17.0",
  "python-docx>=1.1.0",
  "langdetect>=1.0.9",
  "regex>=2023.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
rerank = ["sentence-transformers>=2.2.0", "torch>=2.0.0"]
anthropic = ["anthropic>=0.20.0"]
gemini = ["google-genai>=0.3.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "build", "twine"]
all = ["minirag[rerank,anthropic,gemini]"]

[project.scripts]
minirag = "minirag.cli:main"

[project.urls]
Homepage = "https://github.com/RaghavOG/rag-python"
Repository = "https://github.com/RaghavOG/rag-python"
Documentation = "https://github.com/RaghavOG/rag-python#readme"
Issues = "https://github.com/RaghavOG/rag-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
minirag = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
