[build-system]
requires = ["setuptools>=61.0,<77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-python"
version = "0.3.1"
description = "Production-grade RAG for Python: ingest documents, hybrid search, streaming, multi-LLM, guardrails. CLI + Python API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Raghav Singla", email = "04raghavsingla28@gmail.com" },
]
keywords = ["rag", "llm", "embeddings", "chromadb", "openai", "rag-python", "retrieval-augmented-generation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "openai>=1.12.0",
  "tiktoken>=0.5.0",
  "chromadb>=0.4.22",
  "pypdf>=3.17.0",
  "python-docx>=1.1.0",
  "langdetect>=1.0.9",
  "regex>=2023.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
rerank = ["sentence-transformers>=2.2.0", "torch>=2.0.0"]
local = ["sentence-transformers>=2.2.0"]
hybrid = ["rank-bm25>=0.2.2"]
anthropic = ["anthropic>=0.20.0"]
gemini = ["google-genai>=0.3.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "build", "twine", "rank-bm25>=0.2.2"]
all = ["rag-python[rerank,local,hybrid,anthropic,gemini]"]

[project.scripts]
rag-python = "rag_python.cli:main"

[project.urls]
Homepage = "https://github.com/RaghavOG/rag-python"
Repository = "https://github.com/RaghavOG/rag-python"
Documentation = "https://github.com/RaghavOG/rag-python/tree/main/docs"
Changelog = "https://github.com/RaghavOG/rag-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/RaghavOG/rag-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rag_python = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
